Version 1.0RC3 (?? ??? 2005)
 - Removed ODBC host:database option from php-dbi.php. If needed, host can be 
   added to DSN in settings.php.
 - Changed charset in Czech.txt from utf8 to UTF-8
 - Fixed problem with upcoming.php header. xml:lang and lang were set to full 
   LANGUAGE value, not abbreviation.
 - login.php: Added xml encoding back in, it's now dynamic like other pages.
 - upcoming.php: Fixed problem with "You are not Authorized" error message 
   being sent without a header.
 - Patch 1158090: convert comments for use with phpDocumentor
 - Updated German translation
 - Fixed bug 1156729:Global-view with no valid user creates a non-translatable message
 - Fixed problem with popups.php with long text strings going off screen.
   Maximum width is now configurable.
 - Fixed issue with Application Name containing ? characters in logon.php.
   If Application Name = "Title" then translate, else use Admin defined 
   name and run through htmlspecialchars. Also removed forms[0] references
 - Fixed bug 1152863: Japanese strings munged by reports.php and upcoming.php
 - Fixed bug 1124461: Apostrophe in Text Aborts Translation
 - Fixed bug 1154854: Nonuser cals not showing up in views
 - Fixed issues with display_small_month URLs. Extra & if no $user specified.
 - Fixed bug 1154007: Highlight today in Year view
 - Fixed bug 1088772: Nonuser calendar w/ Public as default participant,
   _public_ not selected
 - Fixed bug 1145390: Merge arrays with array_merge vs + in view_t.php
 - Fixed bug 1112787: missing charset in upcoming.php
 - Patch 1086250: add meta tag for charset since MSIE requires it.
 - Fixed broken advanced search that would not allowing searching other
   users' calendars.  Also added searching non-user calendars.
 - Removed remember_this_view and get_last_view functions.  Instead, send
   users to their preferred view from their preferences ($STARTVIEW).
   Modified preferences to allow user-created views to be saved as their
   preferred page.